--- a/styles/style.css
+++ b/styles/style.css
@@ -246,7 +246,7 @@ main{
 /* About */
 
 .about{
-    height: 70vh;
+    height: 100vh;
 }
 /* Grid */
 
@@ -256,8 +256,8 @@ main{
     grid-template-rows: 1fr auto;
     padding: 10px;
     width: 70%;
-    height: calc(50vh - 10px);
-    margin: 100px auto;
+    height: calc(60vh - 10px);
+    margin: 130px auto;
 }
 
 .grid-item {
@@ -489,7 +489,10 @@ main{
 
 /* Information */
 .information{
-    height: 60vh;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: rgb(229,224,220);
     background: linear-gradient(180deg, rgba(229,224,220,1) 0%, rgba(166,184,196,1) 100%);
 }
@@ -617,6 +620,7 @@ main{
 /* Contact */
 .contact{
     width:90%;
+    height: 100vh;
     margin: 0 auto;
 }
 
@@ -885,13 +889,17 @@ form{
     /* Main */
 
     main{
-        margin: 10px auto;
+        margin: 0px auto 10px auto;
     }
     
     .home_content{
         flex-direction: column;
         text-align: center;
-        padding-top: 10px;
+        padding-top: 0px;
+    }
+
+    .home_footer{
+        bottom: 30px;
     }
 
     .range_date {
