made it some more responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -202,7 +202,7 @@ main{
     display: flex;
     justify-content: space-between;
     position: absolute;
-    bottom: 0;
+    bottom: 35px;
     width: 90%;
 }
 
@@ -1004,10 +1004,6 @@ form{
 
 
     /* Information */
-    .information{
-        height: 80vh;
-    }
-
     .navigate {
         padding: 0 5px;
     }
